# llvm-project

./: .gitignore
llvm/include/llvm/Transforms/Obfuscation/: BogusControlFlow.h  Flattening.h  Split.h  Substitution.h
llvm/lib/Transforms/: CMakeLists.txt
llvm/lib/Transforms/EncryptFunctionName/: CMakeLists.txt  EncryptFunctionName.cpp
llvm/lib/Transforms/IPO/: PassManagerBuilder.cpp
llvm/lib/Transforms/Obfuscation/: CryptoUtils.cpp  Flattening.cpp  SplitBasicBlocks.cpp
study/: hello_llvm.c
study/outpass/: CMakeLists.txt
study/outpass/OutEncryptFunctionName/: CMakeLists.txt  OutEncryptFunctionName.cpp
